--- a/newpassword.html
+++ b/newpassword.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <form onsubmit="return validateNewpasswordForm()" action="login" id="newpasswordForm">
+    <form onsubmit="return validateNewpasswordForm()" action="login.html" id="newpasswordForm">
         <h2>New Password</h2>
         <p class="newpass-info">*Create a new password that you wont use any other websites. </p>
 
@@ -39,10 +39,11 @@
         <button type="submit">Change</button>
     </form>
 
-    <div class="password-layer"></div>
-    <div class="password-msg">
-        <p>Password Changed Successfully <i class="fa-solid fa-check"></i></p>
-        <a href="" onclick="closepopup()">OK</a>
+    <div class="password-layer">
+        <div class="password-msg">
+            <p>Password Changed Successfully <i class="fa-solid fa-check"></i></p>
+            <a href="" onclick="closepopup()">ok</a>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
