--- a/newpassword.html
+++ b/newpassword.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <form onsubmit="return validateNewpasswordForm()" action="login.html" id="newpasswordForm">
+    <form onsubmit="return validateNewpasswordForm()" action="login" id="newpasswordForm">
         <h2>New Password</h2>
         <p class="newpass-info">*Create a new password that you wont use any other websites. </p>
 
